--- a/CRUD.css
+++ b/CRUD.css
@@ -49,13 +49,19 @@ h1{
 	color: #06a8d7;
 }
 
-.add-choice-edit{
+.editadd-choice{
+	font-size: 13px;
+	text-decoration: none;
+	margin-left: 150px;
+	color: #06a8d7;
+}
+
+#btnCancel{
 	font-size: 13px;
 	text-decoration: none;
 	margin-left: 200px;
 	color: #06a8d7;
 }
-
 /* Label Text, Choices and Input */
 
 strong{
@@ -91,7 +97,7 @@ input{
 	margin:0;
 	padding:0;
 	margin-left: 20px;
-	margin-top: 10px;
+	margin-top: 40px;
 }
 .icon-delete-edit{
 	width: 20px;
@@ -99,7 +105,7 @@ input{
 	margin:0;
 	padding:0;
 	margin-left: 20px;
-	margin-top: 10px;
+	margin-top: 40px;
 }
 .icon-edit{
 	width: 20px;
@@ -142,15 +148,29 @@ input{
 /* Innactive Form with Answer */
 
 .inactive-form{
-	margin-top:20px;
+	margin-top:50px;
 	padding:0;
 	margin:0;
 	background-color: #fbfbfb;
-	border-top: 5px solid #a6cbea;
-	height: 100px;
+	border-top: 5px solid #d7e8f7;
+	height: 150px;
 }
 
+#txtAnswers{
+	margin-left: 112px;
+}
 .order-p{
 	margin:0;
 	padding:0;
+}
+.controls{
+	width: 80px;
+	margin-top: -35px;
+    margin-left: 410px;
+}
+.questionToAnswer{
+	margin-top: -30px;
+	margin:0;
+	padding:0;
+	margin-left: 112px;
 }
