--- a/CRUD.css
+++ b/CRUD.css
@@ -2,6 +2,8 @@
 
 body{
 	font-family: 'Roboto';
+	margin:0;
+	padding:0;
 }
 
 .wrapper{
@@ -13,6 +15,8 @@ body{
 
 .add-poll{
 	background-color: #fbfbfb;
+	border: 2px solid #6f767c;
+	box-shadow: 3px 2px 2px #6f767c;
 }
 .add-edit{
 	background-color: #fbfbfb;
@@ -24,6 +28,11 @@ body{
 	list-style-type: none;
 	padding: 0;
 	margin-left: 118px;
+}
+.poll-list-describe{
+	list-style-type: none;
+	padding: 0;
+	margin:0;
 }
 .poll-list-edit {
 	list-style-type: none;
@@ -38,6 +47,7 @@ h1{
 	text-transform: uppercase;
 	font-size: 13px;
 	margin-bottom: 20px;
+	margin-left: 20px;
 }
 
 /* Link for Add Choice */
@@ -97,7 +107,6 @@ input{
 	margin:0;
 	padding:0;
 	margin-left: 20px;
-	margin-top: 40px;
 }
 .icon-delete-edit{
 	width: 20px;
@@ -105,7 +114,6 @@ input{
 	margin:0;
 	padding:0;
 	margin-left: 20px;
-	margin-top: 40px;
 }
 .icon-edit{
 	width: 20px;
@@ -139,9 +147,10 @@ input{
 	font-size: 20px;
 	box-shadow: 3px 3px 3px #888888;
 	border: 1px solid #888888;
-	margin-top: 20px;
+	margin-top: 40px;
 	margin-left: 20px;
 	margin-bottom: 20px;
+	display: block;
 }
 
 
@@ -152,25 +161,27 @@ input{
 	padding:0;
 	margin:0;
 	background-color: #fbfbfb;
-	border-top: 5px solid #d7e8f7;
-	height: 150px;
-}
-
-#txtAnswers{
-	margin-left: 112px;
-}
-.order-p{
-	margin:0;
-	padding:0;
+    box-shadow: 0px -4px 2px rgba(50, 50, 50, 0.75);
 }
 .controls{
-	width: 80px;
-	margin-top: -35px;
-    margin-left: 410px;
+	display: inline-block;
+}
+.strong-display{
+	display: inline-block;
+	margin-bottom: 20px;
 }
 .questionToAnswer{
-	margin-top: -30px;
+	
+	margin-bottom: 20px;
 	margin:0;
 	padding:0;
-	margin-left: 112px;
+	margin-left: 20px;
+	display: inline-block;
+}
+#txtAnswers{
+	margin-top: 30px;
+	margin:0;
+	padding:0;
+	margin-left: 28px;
+	display: inline-block;
 }
